# schema-gateway

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile.upstream  Dockerfile.valgrind  Dockerfile.wrk  README.md
docker/k6-scripts/: load-test.js
docker/wrk-scripts/: post-invalid.lua  post-user.lua  run-tests.sh
docs/: mvp_task_list.md
examples/: README.md  demo-config.yml  demo.sh  hybrid.yml  load-test.sh  mock-upstream.py  permissive.yml  strict.yml
examples/schemas/: post.json  user.json
githooks/: pre-commit  pre-push
src/: cli.rs  config.rs  error.rs  handler.rs  health.rs  lib.rs  main.rs  metrics.rs  openapi.rs  proxy.rs  schema.rs  validation.rs
tests/: cli_parsing.rs  config_merging.rs  config_parsing.rs  config_validation.rs  error_formatting.rs  forward_on_error.rs  integration.rs  json_validation.rs  logging.rs  metrics_health.rs  openapi_validation.rs  proxying.rs  request_handling.rs  route_matching.rs  schema_loading.rs
